--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
             <h1>LOGIN</h1>
         </div>
         <div class="container__form">
+            <div id="msgError"></div>
             <form method="POST" class="form" id="formData">
                 <label for="">Username:</label>
                 <input type="text"  id="" name="username" placeholder="Username">
